--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,17 @@ allprojects {
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
     }
+
+    subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency { details ->
+                if (details.requested.group == 'com.google.android.gms'
+                        && !details.requested.name.contains('multidex') ) {
+                    details.useVersion "12.0.1"
+                }
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
