--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
         <activity android:name=".SignupActivity" />
         <activity android:name=".NeighborhoodActivity" />
         <activity android:name=".NeighborhoodAddActivity" />
+        <activity android:name=".SettingActivity" />
 
     </application>
 
